<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/poster_detail_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/movieposter"
        android:padding="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/fav_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fav"
        android:paddingTop="50dp"
        app:layout_constraintLeft_toRightOf="@id/poster_detail_view"
        />

    <ImageView
        android:id="@+id/star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_star_border"
        app:layout_constraintTop_toBottomOf="@id/fav_label"
        app:layout_constraintLeft_toLeftOf="@id/fav_label"
        app:layout_constraintRight_toRightOf="@id/fav_label"
        android:contentDescription="@string/favorite_star" />


    <TextView
        android:id="@+id/release_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/release"
        android:textSize="12sp"
        android:paddingTop="5dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/poster_detail_view"
        app:layout_constraintTop_toBottomOf="@id/star"/>

    <TextView
        android:id="@+id/release"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="21sp"
        app:layout_constraintTop_toBottomOf="@id/release_label"
        app:layout_constraintLeft_toLeftOf="@id/release_label"
        tools:text="2-3-2018" />

    <TextView
        android:id="@+id/rating_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/rating"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/release"
        app:layout_constraintLeft_toLeftOf="@id/release_label" />

    <TextView
        android:id="@+id/vote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        tools:text="6.9"
        app:layout_constraintTop_toBottomOf="@id/rating_label"
        app:layout_constraintLeft_toLeftOf="@id/release_label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_10"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/vote"
        app:layout_constraintLeft_toRightOf="@id/vote" />

    <TextView
        android:id="@+id/overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/poster_detail_view"
        android:paddingBottom="5dp"
        tools:text="Tetsedhkecdxdecdcwdcdcdcwdcdddddwdcddcdwcwdcwcwdcwcwwcw" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#FF000000"
        app:layout_constraintTop_toBottomOf="@id/overview"/>

</android.support.constraint.ConstraintLayout>